@@ -1,1 +1,5 @@
+NotePlanner.jar is located in build/libs/
 
+To launch application use command:
+
+``java --module-path /path/to/javafx-sdk-17/lib --add-modules=javafx.controls,javafx.fxml -jar NotePlanner.jar``
